--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -4,7 +4,7 @@
         <title>Bootstrap 101 Template</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap -->
-        {% stylesheets '@bootstrap_css' filter='less' %}
+        {% stylesheets '@bootstrap_css' output='bootstrap.css' %}
             <link rel="stylesheet" href="{{ asset_url }}" media="screen" />
         {% endstylesheets %}
 
